# punctuation-restoration

./: .gitignore  README.md  pyproject.toml
notebooks/: 1-seq2seq_formulation.ipynb  2-lstm_bidirectional.ipynb  3-third-party.ipynb  bpe.yttm  bpe2.yttm  lstm_tagger.pt  lstm_tagger_bidirectional.pt
notebooks/myutils/: __init__.py
