[tool.poetry]
name = "punctuation-restoration"
version = "0.1.0"
description = "Overview of different approaches to punctuation restoration."
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-core = "^4.7.1"
notebook = "^6.3.0"
jupyterlab = "^3.0.15"
pandas = "^1.2.4"
numpy = "^1.20.3"
torch = "^1.8.1"
pyarrow = "^4.0.0"
matplotlib = "^3.4.2"
pymorphy2 = "^0.9.1"
pytorch-pretrained-bert = "^0.6.2"
torchtext = "^0.9.1"
transformers = "^4.6.1"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
